fixed manufacturesrs scrollbar

--- a/src/components/ui/HomePage/Manufacturers/Manufacturers.css
+++ b/src/components/ui/HomePage/Manufacturers/Manufacturers.css
@@ -15,74 +15,3 @@
     overflow-x: hidden; /* Ensure no overflow or scrollbars */
     position: relative; /* Ensure correct positioning */
 }
-
-/* Scrollable Bar */
-.manufacturers-scrollable-bar {
-    display: flex;
-    justify-content: flex-start; /* Align items to the left */
-    align-items: center;
-    margin: auto;
-    margin-top: 48px;
-    width: 100%;
-    cursor: grab; /* Hand cursor when hovering */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    scroll-behavior: smooth; /* Smooth scrolling for programmatic navigation */
-    -webkit-overflow-scrolling: touch; /* Smooth scrolling for touch devices */
-    /* Hide the scrollbar on all platforms */
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* Internet Explorer and Edge */
-}
-.manufacturers-scrollable-bar::-webkit-scrollbar {
-    display: none; /* Webkit browsers (Chrome, Safari, Edge) */
-}
-
-/* Scrollable Row */
-.manufacturers-scrollable-row {
-    display: flex;
-    align-items: center;
-    gap: 8px; /* Space between items */
-    flex: 0 0 auto; /* Prevent row from stretching */
-}
-
-/* Scrollable Item */
-.manufacturers-scroll-item {
-    background-color: transparent;
-    padding: 8px;
-    border: 1px solid var(--black);
-    border-radius: 10px;
-    text-align: center;
-    flex: 0 0 auto; /* Prevent shrinking or growing */
-    width: 200px; /* Fixed width for each item */
-    height: 200px; /* Fixed height for each item */
-    margin: 0; /* Remove extra margins */
-    flex-shrink: 0; /* Prevent shrinking */
-}
-
-/* Description Row */
-.manufacturers-description-row {
-    text-align: center;
-    line-height: 1.5;
-    padding: 8px;
-    font-size: var(--fs-md);
-}
-
-/* Specific Width Adjustments */
-.manufacturers-scrollable-bar-one,
-.manufacturers-scrollable-bar-three {
-    width: 90%;
-}
-
-@media (max-width: 768px) {
-    .manufacturers-description-row {
-        font-size: var(--fs-sm);
-    }
-    .manufacturers-scrollable-bar-one,
-    .manufacturers-scrollable-bar-three {
-        width: 100%;
-    }
-
-    .manufacturers-scroll-item {
-        width: 150px; /* Smaller width for items on smaller screens */
-        height: 150px; /* Smaller height for items on smaller screens */
-    }
-}
